--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,15 @@
 		{% include navbar.html %}
 
     <div class="container">
+
 				{{content}}
+
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                {{content}}
+            </div>
+        </div>
+
     </div>
 
   </body>
