--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,28 +1,25 @@
 <!-- Navigation -->
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">Dan Palma</a>
-        </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li>
-                    <a href="https://www.linkedin.com/in/danpalma" class="fa-icon-link"><span class="fa fa-linkedin-square"></span></a>
-                </li>
-                <li>
-                    <a href="https://github.com/dpalma" class="fa-icon-link"><span class="fa fa-github-square"></span></a>
-                </li>
-            </ul>
-        </div>
-        <!-- /.navbar-collapse -->
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbarCollapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">Daniel Palma</a>
     </div>
-    <!-- /.container -->
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div id="navbarCollapse" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+            <li>
+                <a href="https://www.linkedin.com/in/danpalma" class="fa-icon-link" title="LinkedIn"><span class="fa fa-linkedin-square"></span></a>
+            </li>
+            <li>
+                <a href="https://github.com/dpalma" class="fa-icon-link" title="GitHub"><span class="fa fa-github-square"></span></a>
+            </li>
+        </ul>
+    </div>
+    <!-- /.navbar-collapse -->
 </nav>
