--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 		<title>{{ page.title }}</title>
-		<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+		{%include cdn-css.html %}
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
@@ -19,5 +18,6 @@
 
     </div>
 
+		{%include cdn-js.html %}
   </body>
 </html>
