--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,17 +6,24 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
+		{% include fb-sdk.html %}
 		{% include navbar.html %}
 
     <div class="container">
 
         <div class="row">
-            <div class="col-lg-12 text-center">
+            <div class="col-lg-12">
                 {{content}}
             </div>
         </div>
 
     </div>
+
+		{% if page.comments %}
+			<hr/>
+			<div class="fb-comments" data-href="{{ site.url }}" data-num-posts="4">
+			</div>
+		{% endif %}
 
 		{%include cdn-js.html %}
   </body>
