--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,9 +13,23 @@
 
         <div class="row">
             <div class="col-lg-12">
+							<h2>
+                {{page.title}}
+							</h2>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-12">
                 {{content}}
             </div>
         </div>
+
+				<div class="row">
+					<div class="col-lg-12 small">
+						Category: <a href="/categories/#{{ page.category }}">{{ page.category }}</a>
+					</div>
+				</div>
 
     </div>
 
