--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,13 +31,17 @@
 					</div>
 				</div>
 
-    </div>
+				{% if page.comments %}
+				<div class="row">
+					<hr/>
+					<div class="col-lg-12">
+						<div class="fb-comments" data-href="{{ site.url }}" data-num-posts="4">
+						</div>
+					</div>
+				</div>
+				{% endif %}
 
-		{% if page.comments %}
-			<hr/>
-			<div class="fb-comments" data-href="{{ site.url }}" data-num-posts="4">
-			</div>
-		{% endif %}
+    </div>
 
 		{%include cdn-js.html %}
   </body>
