--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,6 @@
 <!-- Navigation -->
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbarCollapse">
@@ -22,4 +23,5 @@
         </ul>
     </div>
     <!-- /.navbar-collapse -->
+  </div>
 </nav>
