Added sidebar and profile image

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,24 @@
 	<body>
 		{% include navbar.html %}
 
-    <div class="container">
-				{{content}}
-    </div>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-9">
+					{{content}}
+				</div>
+				<div class="col-sm-3 hidden-xs">
+					<div class="row">
+						<img class="img-responsive" src="assets/profile.png">
+					</div>
+					<div class="row sidebar-title">
+						Daniel Palma
+					</div>
+					<div class="row">
+						Professional software engineer,<br>amateur everything else
+					</div>
+				</div>
+			</div>
+		</div>
 
 		{%include cdn-js.html %}
   </body>
