--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -13,12 +13,12 @@
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div id="navbarCollapse" class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
+        <ul class="nav navbar-nav pull-right">
             <li>
-                <a href="https://www.linkedin.com/in/danpalma" class="fa-icon-link" title="LinkedIn"><span class="fa fa-linkedin-square"></span></a>
+                <a href="https://www.linkedin.com/in/danpalma" class="fa-icon-link" title="LinkedIn"><span class="fa fa-linkedin-square"></span>&nbsp;LinkedIn</a>
             </li>
             <li>
-                <a href="https://github.com/dpalma" class="fa-icon-link" title="GitHub"><span class="fa fa-github-square"></span></a>
+                <a href="https://github.com/dpalma" class="fa-icon-link" title="GitHub"><span class="fa fa-github-square"></span>&nbsp;GitHub</a>
             </li>
         </ul>
     </div>
